refactor(coreprotect): cleanup