@@ -2,6 +2,7 @@ package net.coreprotect.utility;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -30,7 +31,7 @@ public class Teleport {
 
     public static void performSafeTeleport(Player player, Location location, boolean enforceTeleport) {
         try {
-            Set<Material> unsafeBlocks = new HashSet<>(Arrays.asList(Material.LAVA));
+            Set<Material> unsafeBlocks = new HashSet<>(List.of(Material.LAVA));
             unsafeBlocks.addAll(BlockGroup.FIRE);
 
             int worldHeight = location.getWorld().getMaxHeight();
